[gd_scene load_steps=19 format=2]

[ext_resource path="res://Global.gd" type="Script" id=1]
[ext_resource path="res://Fonts/VarelaRound-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Main/Backgrounds/backgroundColorForest.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=6]
[ext_resource path="res://Assets/PopMenu/returnButtonPressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/PNG/White/2x/arrowLeft.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=9]
[ext_resource path="res://Scripts/IU.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Blank Words.gd" type="Script" id=11]
[ext_resource path="res://Scripts/BackButton.gd" type="Script" id=12]
[ext_resource path="res://Scripts/SuggestedLetters.gd" type="Script" id=13]
[ext_resource path="res://Scripts/HintImage.gd" type="Script" id=14]
[ext_resource path="res://Scripts/HintButton.gd" type="Script" id=15]
[ext_resource path="res://Assets/Icons/PNG/White/2x/information.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="Game" type="Node2D"]
script = ExtResource( 9 )

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Title" type="Label" parent="UI"]
margin_top = 96.0
margin_right = 1280.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.145098, 0.294118, 0.439216, 1 )
text = "VJEŠALICA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="UI"]
script = ExtResource( 6 )

[node name="Start" type="Node2D" parent="UI/Menu"]
script = ExtResource( 4 )

[node name="StartMenu" type="VBoxContainer" parent="UI/Menu/Start"]
margin_top = 256.0
margin_right = 1280.0
margin_bottom = 722.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_right = 1280.0
margin_bottom = 80.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Započni"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 164.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Upute"
flat = true

[node name="Quit" type="Button" parent="UI/Menu/Start/StartMenu"]
margin_top = 168.0
margin_right = 1280.0
margin_bottom = 248.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Izlaz"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/Start"]

[node name="Options" type="Node2D" parent="UI/Menu"]
position = Vector2( 1280, 256 )
script = ExtResource( 5 )

[node name="OptionsMenu" type="VBoxContainer" parent="UI/Menu/Options"]
margin_right = 1280.0
margin_bottom = 464.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Easy" type="Button" parent="UI/Menu/Options/OptionsMenu"]
margin_right = 1280.0
margin_bottom = 80.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Lagano"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medium" type="Button" parent="UI/Menu/Options/OptionsMenu"]
margin_top = 84.0
margin_right = 1280.0
margin_bottom = 164.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Srednje"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hard" type="Button" parent="UI/Menu/Options/OptionsMenu"]
margin_top = 168.0
margin_right = 1280.0
margin_bottom = 248.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.717647, 0.196078, 0.196078, 1 )
custom_colors/font_color_hover = Color( 0.235294, 0.262745, 0.803922, 1 )
custom_colors/font_color_pressed = Color( 0.235294, 0.262745, 0.803922, 1 )
text = "Teško"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI/Menu/Options"]

[node name="BackButton" type="TextureButton" parent="UI/Menu/Options"]
margin_left = 104.0
margin_top = -210.0
margin_right = 204.0
margin_bottom = -110.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="UI"]

[node name="HintImage" type="Node2D" parent="."]
position = Vector2( 976, 48 )
script = ExtResource( 14 )

[node name="move_tween" type="Tween" parent="HintImage"]

[node name="BlankLetters" type="Node2D" parent="."]
position = Vector2( 0, -256 )
script = ExtResource( 11 )

[node name="HBoxContainer" type="HBoxContainer" parent="BlankLetters"]
margin_right = 700.0
margin_bottom = 128.0
grow_horizontal = 0
grow_vertical = 0
rect_clip_content = true
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="BlankLetters"]

[node name="BackButton" type="Node2D" parent="."]
position = Vector2( 0, -100 )
script = ExtResource( 12 )

[node name="TextureButton" type="TextureButton" parent="BackButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="BackButton"]

[node name="HomeButton" type="Node2D" parent="."]

[node name="SuggestedLetters" type="Node2D" parent="."]
position = Vector2( 0, 840 )
script = ExtResource( 13 )

[node name="HBoxContainer" type="HBoxContainer" parent="SuggestedLetters"]
margin_top = -8.0
margin_right = 704.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="SuggestedLetters"]

[node name="HintButtonTimer" type="Timer" parent="."]

[node name="HintButton" type="Node2D" parent="."]
position = Vector2( 1296, 616 )
script = ExtResource( 15 )

[node name="TextureButton" type="TextureButton" parent="HintButton"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_tween" type="Tween" parent="HintButton"]
[connection signal="pressed" from="UI/Menu/Start/StartMenu/Start" to="UI/Menu" method="startPressed"]
[connection signal="pressed" from="UI/Menu/Options/OptionsMenu/Easy" to="." method="easyPressed"]
[connection signal="pressed" from="UI/Menu/Options/BackButton" to="UI/Menu" method="optionsBackButtonPressed"]
[connection signal="pressed" from="BackButton/TextureButton" to="." method="inGameBackButtonPressed"]
[connection signal="timeout" from="HintButtonTimer" to="." method="_on_Timer_timeout_show_hint_button"]
[connection signal="pressed" from="HintButton/TextureButton" to="." method="hintButton_pressed"]
